--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connectkit": "^1.6.0",
     "ethers": "^6.10.0",
     "next": "14.0.4",
+    "nextjs14-connectkit": "file:",
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
