--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "monitor-start": "ts-node services/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@tanstack/query-core": "^5.17.15",
     "antd": "^5.21.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "connectkit": "^1.6.0",
     "ethers": "^6.10.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "nextjs14-connectkit": "file:",
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-variants": "^0.1.20",
     "viem": "^1.21.1",
     "wagmi": "^1.4.12",
