--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "connectkit": "^1.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.10.0",
     "framer-motion": "^11.11.17",
