--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "start": "next start",
     "lint": "next lint",
     "monitor-start": "ts-node services/index.ts",
-    "upload-nfts": "ts-node scripts/upload.ts"
+    "upload-nfts": "ts-node scripts/upload.ts",
+    "cids": "ts-node scripts/getIpfsCids.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@tanstack/query-core": "^5.17.15",
     "antd": "^5.21.6",
+    "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "connectkit": "^1.6.0",
@@ -24,6 +26,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.10.0",
     "framer-motion": "^11.11.17",
+    "ipfs-http-client": "^60.0.1",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^2.1.35",
     "next": "14.0.4",
