--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "viem": "^1.21.1",
     "wagmi": "^1.4.12",
     "web3.storage": "^4.5.5",
-    "yarn": "^1.22.21"
+    "yarn": "^1.22.21",
+    "@reduxjs/toolkit": "^2.0.1",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
