--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/query-core": "^5.17.15",
+    "@tanstack/react-query": "^5.62.3",
     "antd": "^5.21.6",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "connectkit": "^1.6.0",
+    "connectkit": "^1.8.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.10.0",
@@ -34,14 +36,14 @@
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.0.4",
     "tailwind-variants": "^0.1.20",
-    "viem": "^1.21.1",
-    "wagmi": "^1.4.12",
+    "viem": "2.x",
+    "wagmi": "^2.13.5",
     "web3.storage": "^4.5.5",
-    "yarn": "^1.22.21",
-    "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4"
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/node": "^20",
