update: add token list

--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/query-core": "^5.17.15",
     "@tanstack/react-query": "^5.62.3",
+    "@uniswap/token-lists": "^1.0.0-beta.34",
     "antd": "^5.21.6",
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "connectkit": "^1.8.2",
