--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.0.4",
+    "react-tooltip": "^5.28.0",
     "tailwind-variants": "^0.1.20",
     "viem": "2.x",
     "wagmi": "^2.14.6",
