--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "yarn": "^1.22.21"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.64.1",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20",
